Bug 286666 - don't reset username and password when changing auth method
Summary: don't reset username and password when changing auth method
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Wireless (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-15 09:34 UTC by Davide Bettio
Modified: 2011-11-15 18:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Bettio 2011-11-15 09:34:50 UTC
Version:           unspecified
OS:                Linux

don't reset username and password when switching from PAP to MSCHAPv2 auth.

Reproducible: Didn't try

Steps to Reproduce:
type username and password and change from PAP to MSCHAPv2


Expected Results:  
password and username line edits aren't resetted.
Comment 1 Lamarque V. Souza 2011-11-15 13:37:52 UTC
Please be more specific on how to reproduce the problem. I have not even said which connection type you are tried to configure.

I guess you are using wireless connection with Dynamic WEP, right?
Comment 2 Lamarque V. Souza 2011-11-15 18:19:24 UTC
Git commit e7ff24af775e436086ac1cb32dd717d73d865451 by Lamarque V. Souza.
Committed on 15/11/2011 at 19:17.
Pushed by lvsouza into branch 'master'.

Reload config and secrets when changing EAP method for WPA2 TTLS wifi
connections.

BUG: 286666

M  +10   -2    libs/ui/security/eapmethodstack.cpp
M  +2    -0    libs/ui/security/eapmethodstack.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/e7ff24af775e436086ac1cb32dd717d73d865451
Comment 3 Lamarque V. Souza 2011-11-15 18:22:11 UTC
Git commit f408d5f7e3a6687bb16ac7e7a33b8bec1d46cb28 by Lamarque V. Souza.
Committed on 15/11/2011 at 19:17.
Pushed by lvsouza into branch 'nm09'.

Reload config and secrets when changing EAP method for WPA2 TTLS wifi
connections.

BUG: 286666

M  +10   -2    libs/ui/security/eapmethodstack.cpp
M  +2    -0    libs/ui/security/eapmethodstack.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/f408d5f7e3a6687bb16ac7e7a33b8bec1d46cb28