Reload config and secrets when changing EAP method for WPA2 TTLS wifi connections.

BUG: 286666