libs/ui/security/eapmethodstack.h
@@ -55,6 +55,8 @@ public:
     virtual void writeConfig();
     virtual void readSecrets();
     void setShowPasswords(bool on);
+private Q_SLOTS:
+    void setCurrentEapMethodInternal(int);
 protected:
     EapMethodStack(EapMethodStackPrivate &dd, Knm::Connection* connection, QWidget * parent = 0);
 };
